# is-it-down

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.web  PLAN.md  README.md  alembic.ini  cloudbuild.deploy.yaml  pyproject.toml
.agents/skills/create-base-service-checker/: SKILL.md
.github/workflows/: checker-preview.yml  ci.yml  deploy-build-image.yml  deploy-terraform-apply.yml  deploy.yml
infra/terraform/: README.md  artifact_registry.tf  bigquery.tf  checks.tf  cloud_run.tf  custom_domains.tf  main.tf  modules.tf  outputs.tf  project_services.tf  provider.tf  secret_manager.tf  variables.tf
infra/terraform/configs/: config.dev.tfbackend
infra/terraform/iam/: github_actions.tf  variables.tf
migrations/: env.py
migrations/versions/: 20260224_0001_init.py
src/is_it_down/: __init__.py  logging.py  settings.py
src/is_it_down/api/: app.py  bigquery_store.py  cache.py  cache_warm.py  deps.py  schemas.py  service_tracking_middleware.py
src/is_it_down/cache/: redis_secret.py
src/is_it_down/checkers/: __init__.py  base.py  http_client.py  proxy.py  registry.py  statuspage_common.py  utils.py
src/is_it_down/core/: __init__.py  attribution.py  (+4 more)
tests/: test_api_cache.py  test_attribution.py  test_cache_warm.py  test_checker_base.py  test_checker_runtime.py  test_checker_utils.py  test_find_failing_base_checkers.py  test_google_docstrings.py  test_granularity.py  test_http_client.py  test_pr_checker_report.py  test_proxy.py  test_redis_secret.py  test_run_scheduled_checks.py  test_run_service_checker.py  test_scoring.py  test_service_checker_contracts.py  test_service_tracking.py  test_time.py
web/: README.md  next.config.ts  package.json  tsconfig.tsbuildinfo
(+227 files in other folders)
