[project]
name = "is-it-down"
version = "0.1.0"
description = "Backend-first service status platform powered by async API checkers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "is-it-down contributors" }
]
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.116.0",
  "greenlet>=3.3.2",
  "google-cloud-bigquery>=3.38.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.38",
  "structlog>=25.1.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "respx>=0.22.0",
  "ruff>=0.11.0",
]

[project.scripts]
is-it-down-api = "is_it_down.api.app:main"
is-it-down-scheduler = "is_it_down.scheduler.main:main"
is-it-down-worker = "is_it_down.worker.main:main"
is-it-down-seed-demo = "is_it_down.scripts.seed_demo:main"
is-it-down-run-service-checker = "is_it_down.scripts.run_service_checker:main"
is-it-down-run-scheduled-checks = "is_it_down.scripts.run_scheduled_checks:main"
find-failing-base-checkers = "is_it_down.scripts.find_failing_base_checkers:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/is_it_down"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ASYNC", "D"]
ignore = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
